--- a/flag.html
+++ b/flag.html
@@ -8,7 +8,7 @@
 
         .flag {
             display: flex;
-            height: 67ch; 
+            height: 100vh; 
         }
 
         .class1 {
