--- a/information.html
+++ b/information.html
@@ -68,7 +68,7 @@ th
   <h3 style="text-align:center; font-size: 25px;">List Of National And Official Symbols Of India</h3>
 <table BGCOLOR="white" align="center" >
   <span style="font-size: 30px; text-align:left;">
-       <tr><th><b>Symbol:</th><th>Name:</th><th>Image:</th><th>Refference:</th></b></tr>
+       <tr><th><b>Symbol:</th><th>Name:</th><th>Image:</th><th>Reference:</th></b></tr>
 
       <tr><b></td><td>Official Name</td><td>Republic Of India</td><td><img src="India-War-Memorial.webp" width="200"></td> <td>Bhārat has been used as a self-ascribed name by some people of the Indian subcontinent and the Republic of India.The designation Bhārat appears in the official Sanskrit name of the country, Bhārat Gaṇarājya. The name is derived from the ancient Hindu Puranas, which refer to the land that comprises India as Bhāratvarṣa (Sanskrit: भारतवर्ष, lit 'country of Bharat') and uses this term to distinguish it from other varṣas or continents.For example, the Vayu Purana says "he who conquers the whole of Bhāratvarṣa is celebrated as a samrāt (Vayu Purana 45, 86).</td></b></tr>
     
