--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <h2 class="header" id="h2">List Of Indian National Hero</h2>
 
     <div>
-        <h1>1. Mahata Gandhi</h1>
+        <h1>1. Mahatma Gandhi</h1>
         <div class="contain">
             <img src="1img.jpg" alt="Mahata Gandhi" width="300" height="200">
             <p> One of the most iconic men that ever took birth and still continues to survive in the lessons of passive-resistance and non-violence that he selflessly gave to the world, hence making it a much better place. He gave up everything, his law career; his house and wealthy family to fight for justice and for the betterment of his people who were being treated as third class citizens by the colonial British. Even in the harshest of conditions, he never gave up his morals and rules, no matter what the cost of it. Mahatma Gandhi has right fully been given the title of the father of the nation as India truly owes its independence as a republic and a democracy to this Short, thin brown man who needed a stick while walking to support him but who was strong enough to take the responsibility of an entire country and usher it to the world of sovereignty.</p>        
